Changes in version 1.3 (?? ??? 2007)

- B3D changes by Luke: 
	Texture scaling bugfix, support for alpha blending, 
	new option to normalise weights, animation code optimization, fixed memory leak

- Fonts:
	Changed original IGUIFont to IGUIFontASCII and added options for more fonts
	Added CGUIFontMultiTexture for fonts which must span many textures, loads from XML
	Started a font tool for creating the new XML fonts, including generating vector fonts
	(currently not backward compatible with old fonts, only works for Windows, some bugs still)

- GUI:
	GUI Serialization with loadGUI and saveGUI, and serializable custom GUI elements via factories

	Started a GUI Editor as a GUI element factory example (work in progress)

	New IGUIElement functions: isSubElement & setSubElement for child elements created by their parents 
	(eg. a scrollbar on a list box). Set it if you don't want an element to be serialized

	New GUI event, EGET_ELEMENT_FOCUSED

	GUI environment ELEMENT_FOCUS_LOST event now sets the element as the caller, focus_lost events 
	are now usually passed to parent elements, so elements now check if they are the caller before 
	updating (so users can catch focus lost events without them being eaten by the elements)

- ROUNDING_ERROR is now ROUNDING_ERROR_32 or ROUNDING_ERROR_64

- Material TextureWrap:
	Enable Irrlicht to change TextureAddress Mode (Wrapping=Default, and Clamping)
- Material ZBuffer to u32
	Resaon: change ( off or on ) to , off, lequal, equal
	Necessary for multi-pass if previous stage has had transparency
- Attention!: Changed SceneManager:drawAll to
	-> OnPostRender all
	-> Active Camera->OnPreRender
	-> OnPreRender All
	reason: 
		- incorrect Transformation was always one frame off
- DebugDataVisible is now a enum of flags
	show normals is supported ( uses the new build in arrowmesh )
- New Function: GeometryCreator
	addArrowMesh. build a closed cylinder and a cone
	used to show normals as debug feature
- New Function: